--- a/src/main/resources/view/main.fxml
+++ b/src/main/resources/view/main.fxml
@@ -5,26 +5,41 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <ToolBar minHeight="40.0" minWidth="640.0" BorderPane.alignment="CENTER">
         <items>
-            <MenuButton mnemonicParsing="false" text="Люди">
+            <MenuButton mnemonicParsing="false" text="Створити">
               <items>
-                <MenuItem mnemonicParsing="false" text="Викладачі" />
-                <MenuItem mnemonicParsing="false" text="Аспіранти" />
+                <MenuItem mnemonicParsing="false" text="Викладач" />
+                <MenuItem mnemonicParsing="false" text="Аспірант" />
+                  <MenuItem mnemonicParsing="false" text="Наукова тема" />
+                  <MenuItem mnemonicParsing="false" text="Наукова робота" />
               </items>
             </MenuButton>
-            <Button mnemonicParsing="false" text="Наукові теми" />
+            <Button mnemonicParsing="false" text="Перелік тем" />
           <Button mnemonicParsing="false" text="Наукові роботи" />
-            <Button mnemonicParsing="false" text="Пошук" />
             <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="0.0" />
-            <Button mnemonicParsing="false" text="Налаштування">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </Button>
+            <TextField prefHeight="25.0" prefWidth="208.0" promptText="Пошуковий запит..." />
+            <SplitMenuButton mnemonicParsing="false" text="Знайти">
+              <items>
+                <MenuItem mnemonicParsing="false">
+                     <graphic>
+                        <RadioButton mnemonicParsing="false" text="люди" />
+                     </graphic>
+                  </MenuItem>
+                <MenuItem mnemonicParsing="false">
+                     <graphic>
+                        <RadioButton mnemonicParsing="false" text="наукові теми" />
+                     </graphic>
+                  </MenuItem>
+                  <MenuItem mnemonicParsing="false">
+                     <graphic>
+                        <RadioButton mnemonicParsing="false" text="наукові роботи" />
+                     </graphic>
+                  </MenuItem>
+              </items>
+            </SplitMenuButton>
         </items>
       </ToolBar>
    </top>
