--- a/src/main/resources/view/partials/_createPostgraduateTab.fxml
+++ b/src/main/resources/view/partials/_createPostgraduateTab.fxml
@@ -20,7 +20,7 @@
                <children>
                   <VBox alignment="BASELINE_CENTER" maxWidth="200.0" prefWidth="200.0">
                      <children>
-                        <Label text="Додати магістра">
+                        <Label text="Додати аспіранта">
                            <font>
                               <Font size="18.0" />
                            </font></Label>
@@ -33,6 +33,8 @@
                         <DatePicker minWidth="200.0" />
                         <Label layoutX="20.0" layoutY="20.0" text="Дата по" />
                         <DatePicker minWidth="200.0" />
+                        <Label layoutX="30.0" layoutY="30.0" text="Дата захисту" />
+                        <DatePicker layoutX="10.0" layoutY="10.0" minWidth="200.0" />
                         <Button mnemonicParsing="false" text="Button" />
                      </children>
                   </VBox>
