--- a/src/main/resources/view/partials/_listTab.fxml
+++ b/src/main/resources/view/partials/_listTab.fxml
@@ -17,6 +17,42 @@
          <children>
             <VBox>
                <children>
+                  <ToolBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0">
+                    <items>
+                        <StackPane>
+                           <children>
+                              <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT">
+                                 <children>
+                                    <Label text="З">
+                                       <HBox.margin>
+                                          <Insets left="5.0" right="5.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <DatePicker layoutX="10.0" layoutY="10.0" />
+                                    <Label text="По">
+                                       <HBox.margin>
+                                          <Insets left="5.0" right="5.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <DatePicker />
+                                    <Button mnemonicParsing="false" text="Фільтр">
+                                       <HBox.margin>
+                                          <Insets left="10.0" right="10.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </StackPane>
+                        <Separator maxHeight="30.0" orientation="VERTICAL" prefHeight="20.0">
+                           <padding>
+                              <Insets left="50.0" right="50.0" />
+                           </padding>
+                        </Separator>
+                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Відкинути" />
+                      <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Зберегти зміни" />
+                    </items>
+                  </ToolBar>
                   <TableView>
                     <columns>
                       <TableColumn prefWidth="75.0" text="C1" />
