--- a/src/main/resources/view/partials/_listTab.fxml
+++ b/src/main/resources/view/partials/_listTab.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<Tab text="Untitled Tab" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Tab text="Untitled Tab" fx:controller="department.ui.controller.ListTabController" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <content>
       <GridPane>
          <columnConstraints>
@@ -17,12 +17,43 @@
          <children>
             <VBox>
                <children>
-                  <TableView>
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
+                  <ToolBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0">
+                    <items>
+                        <StackPane>
+                           <children>
+                              <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT">
+                                 <children>
+                                    <Label text="З">
+                                       <HBox.margin>
+                                          <Insets left="5.0" right="5.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <DatePicker layoutX="10.0" layoutY="10.0" />
+                                    <Label text="По">
+                                       <HBox.margin>
+                                          <Insets left="5.0" right="5.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <DatePicker />
+                                    <Button mnemonicParsing="false" text="Фільтр">
+                                       <HBox.margin>
+                                          <Insets left="10.0" right="10.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </StackPane>
+                        <Separator maxHeight="30.0" orientation="VERTICAL" prefHeight="20.0">
+                           <padding>
+                              <Insets left="50.0" right="50.0" />
+                           </padding>
+                        </Separator>
+                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Відкинути" />
+                      <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Зберегти зміни" />
+                    </items>
+                  </ToolBar>
+                  <TableView fx:id="tableView" />
                   <Pagination />
                </children>
             </VBox>
