--- a/src/main/resources/view/partials/_listTab.fxml
+++ b/src/main/resources/view/partials/_listTab.fxml
@@ -54,7 +54,7 @@
                     </items>
                   </ToolBar>
                   <TableView fx:id="tableView" />
-                  <Pagination />
+                  <Pagination fx:id="pagination" />
                </children>
             </VBox>
          </children>
