--- a/src/main/resources/view/main.fxml
+++ b/src/main/resources/view/main.fxml
@@ -5,22 +5,37 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="viewRoot" fx:controller="department.ui.controller.MainController" prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="viewRoot" prefHeight="401.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.MainController">
    <top>
       <ToolBar minHeight="40.0" minWidth="640.0" BorderPane.alignment="CENTER">
         <items>
-            <MenuButton mnemonicParsing="false" text="Створити">
-              <items>
-                  <MenuItem mnemonicParsing="false" text="Магістр" onAction="#onCreateMaster"/>
-                <MenuItem mnemonicParsing="false" text="Викладач" />
-                <MenuItem mnemonicParsing="false" text="Аспірант" />
-                  <MenuItem mnemonicParsing="false" text="Наукова тема" />
-                  <MenuItem mnemonicParsing="false" text="Наукова робота" />
-              </items>
-            </MenuButton>
-            <Button mnemonicParsing="false" text="Перелік тем" />
-            <Button mnemonicParsing="false" text="Магістри" onMouseClicked="#onViewMaster"/>
-          <Button mnemonicParsing="false" text="Наукові роботи" />
+            <MenuBar>
+              <menus>
+                <Menu mnemonicParsing="false" text="Додати">
+                  <items>
+                        <MenuItem mnemonicParsing="false" text="Наукова тема" />
+                        <MenuItem mnemonicParsing="false" text="Наукова робота" />
+                        <MenuItem mnemonicParsing="false" text="Аспірант" />
+                        <MenuItem mnemonicParsing="false" text="Викладач" />
+                        <MenuItem mnemonicParsing="false" onAction="#onCreateMaster" text="Магістр" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Переглянути">
+                  <items>
+                        <MenuItem mnemonicParsing="false" onAction="#onCreateMaster" text="Магістри" />
+                      <MenuItem mnemonicParsing="false" text="Викладачі" />
+                      <MenuItem mnemonicParsing="false" text="Аспіранти" />
+                        <MenuItem mnemonicParsing="false" text="Наукові теми" />
+                        <MenuItem mnemonicParsing="false" text="Наукові роботи" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Призначити">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Наукова робота" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
             <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="0.0" />
             <TextField prefHeight="25.0" prefWidth="208.0" promptText="Пошуковий запит..." />
             <SplitMenuButton mnemonicParsing="false" text="Знайти">
