Added gui elements

--- a/src/main/resources/view/partials/_listTemplate.fxml
+++ b/src/main/resources/view/partials/_listTemplate.fxml
@@ -50,7 +50,7 @@
                         </StackPane>
                     </items>
                 </ToolBar>
-                <TableView fx:id="tableView" />
+                <TableView fx:id="tableView" fixedCellSize="25.0" />
                 <Pagination fx:id="pagination" />
             </children>
         </VBox>
