--- a/src/main/resources/view/partials/_formPaper.fxml
+++ b/src/main/resources/view/partials/_formPaper.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="696.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<GridPane maxHeight="-Infinity" fx:controller="department.ui.controller.CreatePaperController" fx:id="viewRoot" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="696.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="10.0" prefWidth="65.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.0" minWidth="10.0" prefWidth="88.0" />
@@ -24,7 +24,7 @@
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <children>
             <Label text="Тема роботи" />
-            <TextField editable="false" />
+            <TextField editable="false" fx:id="titleField"/>
             <HBox prefHeight="54.0" prefWidth="389.0">
                <children>
                   <VBox>
@@ -34,7 +34,7 @@
                               <Insets right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField prefHeight="25.0" />
+                        <TextField prefHeight="25.0" fx:id="typeField"/>
                      </children>
                   </VBox>
                   <VBox>
@@ -44,7 +44,7 @@
                               <Insets left="30.0" right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField prefHeight="25.0" prefWidth="65.0" />
+                        <TextField prefHeight="25.0" prefWidth="65.0" fx:id="yearField" />
                      </children>
                      <HBox.margin>
                         <Insets left="40.0" />
@@ -56,9 +56,9 @@
                </VBox.margin>
             </HBox>
             <Label text="Керівник" />
-            <TextField />
+            <TextField  />
             <Label text="Виконавець" />
-            <ComboBox editable="true" maxWidth="1.7976931348623157E308" styleClass="combo-box1" stylesheets="@../style.css" />
+            <ComboBox editable="true" fx:id="executorBox" maxWidth="1.7976931348623157E308" styleClass="combo-box1" stylesheets="@../style.css" />
             <FlowPane prefHeight="86.0" prefWidth="389.0" />
          </children>
       </VBox>
@@ -78,7 +78,7 @@
       </HBox>
       <VBox alignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <children>
-            <Button mnemonicParsing="false" text="Додати роботу" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" text="Додати роботу" onAction="#onCreatePaper" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </VBox>
    </children>
