--- a/src/main/resources/view/partials/_formPostgraduate.fxml
+++ b/src/main/resources/view/partials/_formPostgraduate.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<GridPane prefHeight="404.0" prefWidth="289.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane prefHeight="404.0" fx:id="viewRoot" fx:controller="department.ui.controller.CreatePostgraduateController" prefWidth="289.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" />
     </columnConstraints>
@@ -23,7 +23,7 @@
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <ComboBox minWidth="200.0" promptText="Кафедра">
+                        <ComboBox minWidth="200.0" promptText="Кафедра" fx:id="departmentComboBox">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></ComboBox>
@@ -31,7 +31,7 @@
                      <padding>
                         <Insets top="3.0" />
                      </padding></Label>
-                        <TextField>
+                        <TextField fx:id="fullNameField">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></TextField>
@@ -39,7 +39,7 @@
                      <padding>
                         <Insets top="3.0" />
                      </padding></Label>
-                        <TextField>
+                        <TextField fx:id="phoneField">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></TextField>
@@ -47,7 +47,7 @@
                      <padding>
                         <Insets top="3.0" />
                      </padding></Label>
-                        <DatePicker minWidth="200.0">
+                        <DatePicker minWidth="200.0" fx:id="startDatePicker">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></DatePicker>
@@ -55,7 +55,7 @@
                      <padding>
                         <Insets top="3.0" />
                      </padding></Label>
-                        <DatePicker minWidth="200.0">
+                        <DatePicker minWidth="200.0" fx:id="endDatePicker">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></DatePicker>
@@ -63,11 +63,11 @@
                      <padding>
                         <Insets top="3.0" />
                      </padding></Label>
-                        <DatePicker layoutX="10.0" layoutY="10.0" minWidth="200.0">
+                        <DatePicker layoutX="10.0" layoutY="10.0" minWidth="200.0" fx:id="defenceDatePicker">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></DatePicker>
-                        <Button mnemonicParsing="false" text="Button">
+                        <Button mnemonicParsing="false" text="Button" onAction="#onCreatePostgraduate">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin></Button>
