--- a/src/main/resources/view/partials/_formTeacher.fxml
+++ b/src/main/resources/view/partials/_formTeacher.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<GridPane prefHeight="451.0" prefWidth="326.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:controller="department.ui.controller.CreateTeacherController" fx:id="viewRoot" prefHeight="451.0" prefWidth="326.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" />
     </columnConstraints>
@@ -27,14 +27,14 @@
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin></Label>
-                        <TextField>
+                        <TextField fx:id="fullNameField">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></TextField>
-                        <ComboBox minWidth="200.0" promptText="Кафедра">
+                        <ComboBox minWidth="200.0" fx:id="departmentComboBox" promptText="Кафедра">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -45,7 +45,7 @@
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin></Label>
-                        <TextField>
+                        <TextField fx:id="phoneField">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -53,13 +53,13 @@
                         <Insets bottom="5.0" />
                      </VBox.margin></TextField>
                   <Label text="Звання" />
-                  <TextField>
+                  <TextField fx:id="positionField">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                   </TextField>
                   <Label text="Науковий ступінь" />
-                  <TextField>
+                  <TextField fx:id="degreeField">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -68,7 +68,7 @@
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin></Label>
-                        <DatePicker minWidth="200.0">
+                        <DatePicker minWidth="200.0" fx:id="startDatePicker">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -79,14 +79,14 @@
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin></Label>
-                        <DatePicker minWidth="200.0">
+                        <DatePicker minWidth="200.0" fx:id="endDatePicker">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin></DatePicker>
-                        <Button mnemonicParsing="false" text="Додати">
+                        <Button mnemonicParsing="false" text="Додати" onAction="#onCreateTeacher">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin></Button>
