--- a/src/main/resources/view/partials/_formTopic.fxml
+++ b/src/main/resources/view/partials/_formTopic.fxml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" fx:controller="department.ui.controller.CreateTopicController" fx:id="viewRoot" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="696.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="viewRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="696.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.CreateTopicController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="10.0" prefWidth="65.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.0" minWidth="10.0" prefWidth="88.0" />
@@ -24,9 +32,9 @@
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <children>
             <Label text="Назва теми" />
-            <TextField editable="false" fx:id="titleField"/>
+            <TextField fx:id="titleField" />
             <Label text="Замовник" />
-            <TextField editable="false" fx:id="clientField"/>
+            <TextField fx:id="clientField" />
             <HBox prefHeight="54.0" prefWidth="389.0">
                <children>
                   <VBox>
@@ -36,7 +44,7 @@
                               <Insets right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <DatePicker fx:id="startDatePicker"/>
+                        <DatePicker fx:id="startDatePicker" />
                      </children>
                   </VBox>
                   <VBox>
@@ -58,10 +66,10 @@
                </VBox.margin>
             </HBox>
             <Label text="Кафедра" />
-            <ComboBox editable="true" maxWidth="1.7976931348623157E308" promptText="Кафедра" fx:id="departmentComboBox" styleClass="combo-box1" stylesheets="@../style.css" />
+            <ComboBox fx:id="departmentComboBox" maxWidth="1.7976931348623157E308" promptText="Кафедра" styleClass="combo-box1" stylesheets="@../style.css" />
             <FlowPane prefHeight="62.0" prefWidth="389.0" />
             <Label text="Керівник" />
-            <ComboBox editable="true" maxWidth="1.7976931348623157E308" styleClass="combo-box1" stylesheets="@../style.css" />
+            <ComboBox fx:id="teacherComboBox" editable="true" maxWidth="1.7976931348623157E308" styleClass="combo-box1" stylesheets="@../style.css" />
             <FlowPane prefHeight="62.0" prefWidth="389.0" />
          </children>
       </VBox>
@@ -81,7 +89,7 @@
       </HBox>
       <VBox alignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <children>
-            <Button mnemonicParsing="false" text="Додати роботу" onAction="#onCreateTopic" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#onCreateTopic" text="Додати роботу" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </VBox>
    </children>
