--- a/src/main/resources/view/partials/_listTemplate.fxml
+++ b/src/main/resources/view/partials/_listTemplate.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -15,54 +19,45 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.ListTabController">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="0.0" vgrow="SOMETIMES" />
-    </rowConstraints>
-    <children>
-        <VBox GridPane.vgrow="ALWAYS">
-            <children>
-                <ToolBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0">
-                    <items>
-                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Оновити" />
-                        <Separator maxHeight="30.0" orientation="VERTICAL" prefHeight="20.0">
-                            <padding>
-                                <Insets left="50.0" right="50.0" />
-                            </padding>
-                        </Separator>
-                        <StackPane>
-                            <children>
-                                <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT">
-                                    <children>
-                                        <Label text="З">
-                                            <HBox.margin>
-                                                <Insets left="5.0" right="5.0" />
-                                            </HBox.margin>
-                                        </Label>
-                                        <DatePicker layoutX="10.0" layoutY="10.0" />
-                                        <Label text="По">
-                                            <HBox.margin>
-                                                <Insets left="5.0" right="5.0" />
-                                            </HBox.margin>
-                                        </Label>
-                                        <DatePicker />
-                                        <Button mnemonicParsing="false" text="Фільтр">
-                                            <HBox.margin>
-                                                <Insets left="10.0" right="10.0" />
-                                            </HBox.margin>
-                                        </Button>
-                                    </children>
-                                </HBox>
-                            </children>
-                        </StackPane>
-                    </items>
-                </ToolBar>
-                <TableView fx:id="tableView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
-                <Pagination fx:id="pagination" VBox.vgrow="NEVER" />
-            </children>
-        </VBox>
-    </children>
-</GridPane>
+
+  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.ListTabController">
+      <children>
+          <ToolBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0">
+              <items>
+                  <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Оновити" />
+                  <Separator maxHeight="30.0" orientation="VERTICAL" prefHeight="20.0">
+                      <padding>
+                          <Insets left="50.0" right="50.0" />
+                      </padding>
+                  </Separator>
+                  <StackPane>
+                      <children>
+                          <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT">
+                              <children>
+                                  <Label text="З">
+                                      <HBox.margin>
+                                          <Insets left="5.0" right="5.0" />
+                                      </HBox.margin>
+                                  </Label>
+                                  <DatePicker layoutX="10.0" layoutY="10.0" />
+                                  <Label text="По">
+                                      <HBox.margin>
+                                          <Insets left="5.0" right="5.0" />
+                                      </HBox.margin>
+                                  </Label>
+                                  <DatePicker />
+                                  <Button mnemonicParsing="false" text="Фільтр">
+                                      <HBox.margin>
+                                          <Insets left="10.0" right="10.0" />
+                                      </HBox.margin>
+                                  </Button>
+                              </children>
+                          </HBox>
+                      </children>
+                  </StackPane>
+              </items>
+          </ToolBar>
+          <TableView fx:id="tableView" VBox.vgrow="ALWAYS" />
+          <Pagination fx:id="pagination" maxHeight="40.0" pageCount="0" prefHeight="40.0" VBox.vgrow="NEVER" />
+      </children>
+  </VBox>
