--- a/src/main/resources/view/partials/_listTemplate.fxml
+++ b/src/main/resources/view/partials/_listTemplate.fxml
@@ -19,8 +19,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.ListTabController">
+<VBox minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.ListTabController">
       <children>
           <ToolBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0">
               <items>
@@ -57,7 +56,10 @@
                   </StackPane>
               </items>
           </ToolBar>
-          <TableView fx:id="tableView" VBox.vgrow="ALWAYS" />
+          <TableView fx:id="tableView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
           <Pagination fx:id="pagination" maxHeight="40.0" pageCount="0" prefHeight="40.0" VBox.vgrow="NEVER" />
       </children>
   </VBox>
